--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,11 +1,13 @@
 main:
-  - title: "About"
-    url: /about/
+  - title: "Home"
+    url: /
   - title: "Registration"
     url: /registration/
   - title: "Programme"
     url: /programme/
   - title: "Participants"
     url: /participants/
+  - title: "Venue"
+    url: /venue/
   - title: "Code of Conduct"
-    url: /code-of-conduct/"
+    url: /code-of-conduct/  
