--- a/_config.yml
+++ b/_config.yml
@@ -21,20 +21,33 @@ email:
   Google search results) and in your feed.xml site description.
 #twitter_username: username
 #github_username: username
-#minimal_mistakes_skin: default
-#search: true
+minimal_mistakes_skin: default
+search: true
+lunr:
+  search_within_pages: true
+
 
 # Build settings
 markdown: kramdown
 remote_theme: mmistakes/minimal-mistakes
 # Outputting
-#permalink: /:categories/:title/
+#permalink: /about/
 #paginate: 5 # amount of posts to show
-#paginate_path: /page:num/
+#paginate_path: /posts/page:num/
 timezone: # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
 include:
   - _pages
+
+
+# teaser image
+teaser: /assets/images/disc.jpg
+
+# logo
+logo: "/assets/images/warwick.png"
+
+# text wide
+classes: wide
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
