updated SOC LOC and some info

--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ include:
 # header
 header:
   image: /assets/images/disc.jpg
-
+  caption: "Credit: SpaceEngine © Cosmographic Software LLC."
 
 # logo
 logo: "/assets/images/warwick.png"
