fixing some minor comments

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,7 +6,7 @@ main:
   - title: "Programme"
     url: /programme/
   - title: "Practical Information"
-    url: /practical-info/
+    url: /info/
   - title: "Participants"
     url: /participants/
   - title: "UKI Discs Mailing List"
