fixed url link for register page

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,8 +1,8 @@
 main:
   - title: "Home"
     url: /
-  - title: "Registration"
-    url: /registration/
+  - title: "Register"
+    url: /register/
   - title: "Programme"
     url: /programme/
   - title: "Practical Information"
