--- a/_config.yml
+++ b/_config.yml
@@ -15,10 +15,13 @@
 # in the templates via {{ site.myvariable }}.
 title: UKI Discs Meeting 2024
 email:
-#description: >- # this means to ignore newlines until "baseurl:"
+description: The UK & Ireland Discs Meeting 2024  # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
+url: "https://ukidiscs/github/io"
+baseurl: "/discs2024"
+
 #twitter_username: username
 #github_username: username
 minimal_mistakes_skin: default
