--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,8 @@ description: The UK & Ireland Discs Meeting 2024  # this means to ignore newline
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
-url: "https://ukidiscs/github/io"
+
+url: "https://ukidiscs.github.io"
 baseurl: "/discs2024"
 
 #twitter_username: username
