--- a/_config.yml
+++ b/_config.yml
@@ -14,14 +14,10 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: UKI Discs Meeting 2024
-email:
+# email:
 description: The UK & Ireland Discs Meeting 2024  # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-
-#url: "https://ukidiscs.github.io"
-#baseurl: "/discs2024"
+url: "https://ukidiscs.github.io"
+baseurl: "/discs2024"
 
 #twitter_username: username
 #github_username: username
