--- a/_config.yml
+++ b/_config.yml
@@ -46,7 +46,7 @@ header:
   caption: "Credit: SpaceEngine © Cosmographic Software LLC."
 
 # logo
-logo: "/assets/images/warwick.png"
+logo: "/assets/images/UKI_Logo_notext.png"
 
 # text wide
 classes: wide
