--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,4 +11,5 @@ main:
     url: /participants/
   - title: "UKI Discs Mailing List"
     url: /mailing-list/
-
+ - title: "Conference Photo"
+    url: /conference-photo/
