--- a/_config.yml
+++ b/_config.yml
@@ -16,8 +16,8 @@
 title: UK & Ireland Discs Meeting 2025
 # email:
 description: The UK & Ireland Discs Meeting 2025  # this means to ignore newlines until "baseurl:"
-url: "https://ukidiscs.github.io"
-baseurl: "/discs2025"
+url: "https://rpn1966.github.io"
+baseurl: "/webtest2"
 
 #twitter_username: username
 #github_username: username
