--- a/_config.yml
+++ b/_config.yml
@@ -16,8 +16,8 @@
 title: PLATO Theory Meeting 2026
 # email:
 description: PLATO Theory Meeting 2026  # this means to ignore newlines until "baseurl:"
-url: "https://rpn1966.github.io/webtest2/"
-baseurl: "/webtest2"
+url: "https://rpn1966.github.io/platotheory2026/"
+baseurl: "/platotheory2026"
 
 #twitter_username: username
 #github_username: username
